fixed social icons in blog on mobile

--- a/src/states/blog/post/blog.post.less
+++ b/src/states/blog/post/blog.post.less
@@ -19,8 +19,14 @@
         .to-rem(width, 20) !important;
         .to-rem(height, 20) !important;
         margin: 0 !important;
+        margin-bottom: -8px !important;
+        .screen-md-min({margin-bottom: 0 !important;})
+
     }
     &:hover {
         color: @color-yellow;
     }
+
+
+    margin-bottom: -8px !important;
 }
